compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.fir.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
  private java.lang.String getN();//  getN()

  private java.lang.String getNn();//  getNn()

  private void setNn(java.lang.String);//  setNn(java.lang.String)
}
